Phase 8: Admin panel + homepage tabs + bookshelf search & filter fixes
- Admin backend: user/comment/legal-document management, role-based access
- Admin frontend: Users, Comments, LegalDocuments pages + navigation
- Backend: group_key column on categories for gender/audio/short tab filtering
- H5 homepage: all 4 data sections now respond to main tab switches
- H5 rank page: category tabs filter by groupKey, fixed scroll-view heights
- H5 bookshelf: local search across shelf/favorites/history, filter type fix
- H5 category page: search respects active gender tab
- Fix goBack() across all pages for post-refresh navigation recovery
- Bookshelf empty states redesigned with visuals
- Hide non-functional category tabs (出版/漫剧/短篇)

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>