@@ -10,7 +10,9 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -27,6 +29,8 @@ public class UserDetailsServiceImpl implements UserDetailsService {
             throw new UsernameNotFoundException("User not found: " + username);
         }
 
-        return new User(appUser.getUsername(), appUser.getPasswordHash(), Collections.emptyList());
+        String role = appUser.getRole() != null ? appUser.getRole() : "USER";
+        return new User(appUser.getUsername(), appUser.getPasswordHash(),
+                List.of(new SimpleGrantedAuthority("ROLE_" + role)));
     }
 }
